--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@
 }
 
 .dropzone {
-  width: 400px;
+  width: 80%;
+  height: 40%;
+  max-width: 400px;
   height: 200px;
   display: flex;
   flex-direction: column;
@@ -43,7 +45,11 @@ h1 {
 }
 
 .file-info {
-  margin-top: 32px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: left;
+  font-weight: 600;
 }
 
 .active-dropzone {
@@ -55,4 +61,49 @@ h1 {
 .active-dropzone label {
   background-color: var(--secondary);
   color: var(--primary);
+}
+
+.card {
+  width: 80%;
+  height: 20%;
+  max-width: 400px;
+  max-height: 100px;
+  border-radius: 0.5rem;
+  background-color: var(--secondary);
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-img {
+  box-sizing: border-box;
+  padding: 0.5rem;
+  width: 30%;
+  border-radius: 0.8rem;
+}
+
+.card-body {
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.btn-1 {
+  color: rgb(0,128,0,0.5);
+  cursor: pointer;
+}
+
+.btn-1:hover {
+  color: rgba(0,128,0,1);
+}
+
+.btn-2 {
+  color: rgba(255,0,0,0.5);
+  cursor: pointer;
+}
+
+.btn-2:hover {
+  color: rgba(255,0,0,1);
 }
