--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     color: var(--primary);
+    border: 1px solid var(--primary);
 }
 
 .card-image-container {
